crates/loxide_parser/snapshots/parser/snapshots-outputs/loxide__parser__tests__expression.snap
---
source: src/parser.rs
expression: asts
---
[
    Err(
        Expect(
            "expression",
        ),
    ),
    Err(
        Expect(
            "expression",
        ),
    ),
    Err(
        Expect(
            "expression",
        ),
    ),
]
