crates/loxide_parser/snapshots/parser/snapshots-outputs/loxide__parser__tests__primary.snap
---
source: src/parser.rs
expression: asts
---
[
    Ok(
        Expr {
            kind: Literal(
                Nil,
            ),
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                Boolean(
                    true,
                ),
            ),
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                Boolean(
                    false,
                ),
            ),
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                String(
                    "hello world",
                ),
            ),
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                Number(
                    123.0,
                ),
            ),
        },
    ),
    Ok(
        Expr {
            kind: Grouped(
                Expr {
                    kind: Binary(
                        BinaryExpr {
                            lhs: Expr {
                                kind: Unary(
                                    UnaryExpr {
                                        operator: Minus,
                                        expr: Expr {
                                            kind: Literal(
                                                Number(
                                                    123.0,
                                                ),
                                            ),
                                        },
                                    },
                                ),
                            },
                            rhs: Expr {
                                kind: Literal(
                                    Number(
                                        456.0,
                                    ),
                                ),
                            },
                            operator: Plus,
                        },
                    ),
                },
            ),
        },
    ),
]
